--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <html>
     <head></head>
     <body>
-        <h1 id="notes">Notes App</h1>
+        <h1>Notes App</h1>
+        <h2>Take Notes again and again</h2>
         <input id="search" type="text" placeholder="Filter Notes">
-        <button class="add-note">Add Note</button>
-        <button class="remove-note">Delete all Notes</button>
+        <select name="dropdown" id="dropdown">
+            <option value="byEdited">Sort by Last Edited</option>
+            <option value="byCreated">Sort by recently Created</option>
+            <option value="alphabetical">Sort alphabetically</option>
+        </select>
+        <div id="notes"></div>
+        <button id="create-note">Create Note</button>
+        <script src="notes-functions.js"></script>
         <script src="notes.js"></script>
         
     </body>
